Fixed add/remove button spacing and sizing

--- a/react-test-project/src/index.css
+++ b/react-test-project/src/index.css
@@ -345,6 +345,9 @@ h2{
 .sidebtn-group{
   justify-content: center;
 }
+.sidebtn{
+  width:65px;
+}
 
 
 .questionTitleStyle {
